--- a/crm/Views/TeacherAndSubjects/Details.cshtml
+++ b/crm/Views/TeacherAndSubjects/Details.cshtml
@@ -14,13 +14,13 @@
             @Html.DisplayNameFor(model => model.Teacher)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Teacher.TeacherId)
+            @Html.DisplayFor(model => model.Teacher.TeacherFirstName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Subject)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Subject.SubjectId)
+            @Html.DisplayFor(model => model.Subject.SubjectName)
         </dd>
     </dl>
 </div>
