--- a/crm/Views/_ViewImports.cshtml
+++ b/crm/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using crm
 @using crm.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
+@addTagHelper "*, CustomTagHelpersAndViewComponents"
